Ejemplos Bison/Ejemplo 6 - Calculadora con Funciones y Variables (TS gestionada por PARSER)/obj/mfcalc.output
Gramática

    0 $accept: input $end

    1 input: /* vacío */
    2      | input line

    3 line: '\n'
    4     | exp '\n'
    5     | error '\n'

    6 exp: NUM
    7    | ID
    8    | ID '=' exp
    9    | ID '(' exp ')'
   10    | exp '+' exp
   11    | exp '-' exp
   12    | exp '*' exp
   13    | exp '/' exp
   14    | '-' exp
   15    | exp '^' exp
   16    | '(' exp ')'


Terminales con las reglas donde aparecen

$end (0) 0
'\n' (10) 3 4 5
'(' (40) 9 16
')' (41) 9 16
'*' (42) 12
'+' (43) 10
'-' (45) 11 14
'/' (47) 13
'=' (61) 8
'^' (94) 15
error (256) 5
NUM (258) 6
ID (259) 7 8 9
NEG (260)


No terminales con las reglas donde aparecen

$accept (15)
    en la izquierda: 0
input (16)
    en la izquierda: 1 2, en la derecha: 0 2
line (17)
    en la izquierda: 3 4 5, en la derecha: 2
exp (18)
    en la izquierda: 6 7 8 9 10 11 12 13 14 15 16, en la derecha: 4
    8 9 10 11 12 13 14 15 16


estado 0

    0 $accept: . input $end

    $default  reduce usando la regla 1 (input)

    input  ir al estado 1


estado 1

    0 $accept: input . $end
    2 input: input . line

    $end   desplazar e ir al estado 2
    error  desplazar e ir al estado 3
    NUM    desplazar e ir al estado 4
    ID     desplazar e ir al estado 5
    '-'    desplazar e ir al estado 6
    '\n'   desplazar e ir al estado 7
    '('    desplazar e ir al estado 8

    line  ir al estado 9
    exp   ir al estado 10


estado 2

    0 $accept: input $end .

    $default  aceptar


estado 3

    5 line: error . '\n'

    '\n'  desplazar e ir al estado 11


estado 4

    6 exp: NUM .

    $default  reduce usando la regla 6 (exp)


estado 5

    7 exp: ID .
    8    | ID . '=' exp
    9    | ID . '(' exp ')'

    '='  desplazar e ir al estado 12
    '('  desplazar e ir al estado 13

    $default  reduce usando la regla 7 (exp)


estado 6

   14 exp: '-' . exp

    NUM  desplazar e ir al estado 4
    ID   desplazar e ir al estado 5
    '-'  desplazar e ir al estado 6
    '('  desplazar e ir al estado 8

    exp  ir al estado 14


estado 7

    3 line: '\n' .

    $default  reduce usando la regla 3 (line)


estado 8

   16 exp: '(' . exp ')'

    NUM  desplazar e ir al estado 4
    ID   desplazar e ir al estado 5
    '-'  desplazar e ir al estado 6
    '('  desplazar e ir al estado 8

    exp  ir al estado 15


estado 9

    2 input: input line .

    $default  reduce usando la regla 2 (input)


estado 10

    4 line: exp . '\n'
   10 exp: exp . '+' exp
   11    | exp . '-' exp
   12    | exp . '*' exp
   13    | exp . '/' exp
   15    | exp . '^' exp

    '-'   desplazar e ir al estado 16
    '+'   desplazar e ir al estado 17
    '*'   desplazar e ir al estado 18
    '/'   desplazar e ir al estado 19
    '^'   desplazar e ir al estado 20
    '\n'  desplazar e ir al estado 21


estado 11

    5 line: error '\n' .

    $default  reduce usando la regla 5 (line)


estado 12

    8 exp: ID '=' . exp

    NUM  desplazar e ir al estado 4
    ID   desplazar e ir al estado 5
    '-'  desplazar e ir al estado 6
    '('  desplazar e ir al estado 8

    exp  ir al estado 22


estado 13

    9 exp: ID '(' . exp ')'

    NUM  desplazar e ir al estado 4
    ID   desplazar e ir al estado 5
    '-'  desplazar e ir al estado 6
    '('  desplazar e ir al estado 8

    exp  ir al estado 23


estado 14

   10 exp: exp . '+' exp
   11    | exp . '-' exp
   12    | exp . '*' exp
   13    | exp . '/' exp
   14    | '-' exp .
   15    | exp . '^' exp

    '^'  desplazar e ir al estado 20

    $default  reduce usando la regla 14 (exp)


estado 15

   10 exp: exp . '+' exp
   11    | exp . '-' exp
   12    | exp . '*' exp
   13    | exp . '/' exp
   15    | exp . '^' exp
   16    | '(' exp . ')'

    '-'  desplazar e ir al estado 16
    '+'  desplazar e ir al estado 17
    '*'  desplazar e ir al estado 18
    '/'  desplazar e ir al estado 19
    '^'  desplazar e ir al estado 20
    ')'  desplazar e ir al estado 24


estado 16

   11 exp: exp '-' . exp

    NUM  desplazar e ir al estado 4
    ID   desplazar e ir al estado 5
    '-'  desplazar e ir al estado 6
    '('  desplazar e ir al estado 8

    exp  ir al estado 25


estado 17

   10 exp: exp '+' . exp

    NUM  desplazar e ir al estado 4
    ID   desplazar e ir al estado 5
    '-'  desplazar e ir al estado 6
    '('  desplazar e ir al estado 8

    exp  ir al estado 26


estado 18

   12 exp: exp '*' . exp

    NUM  desplazar e ir al estado 4
    ID   desplazar e ir al estado 5
    '-'  desplazar e ir al estado 6
    '('  desplazar e ir al estado 8

    exp  ir al estado 27


estado 19

   13 exp: exp '/' . exp

    NUM  desplazar e ir al estado 4
    ID   desplazar e ir al estado 5
    '-'  desplazar e ir al estado 6
    '('  desplazar e ir al estado 8

    exp  ir al estado 28


estado 20

   15 exp: exp '^' . exp

    NUM  desplazar e ir al estado 4
    ID   desplazar e ir al estado 5
    '-'  desplazar e ir al estado 6
    '('  desplazar e ir al estado 8

    exp  ir al estado 29


estado 21

    4 line: exp '\n' .

    $default  reduce usando la regla 4 (line)


estado 22

    8 exp: ID '=' exp .
   10    | exp . '+' exp
   11    | exp . '-' exp
   12    | exp . '*' exp
   13    | exp . '/' exp
   15    | exp . '^' exp

    '-'  desplazar e ir al estado 16
    '+'  desplazar e ir al estado 17
    '*'  desplazar e ir al estado 18
    '/'  desplazar e ir al estado 19
    '^'  desplazar e ir al estado 20

    $default  reduce usando la regla 8 (exp)


estado 23

    9 exp: ID '(' exp . ')'
   10    | exp . '+' exp
   11    | exp . '-' exp
   12    | exp . '*' exp
   13    | exp . '/' exp
   15    | exp . '^' exp

    '-'  desplazar e ir al estado 16
    '+'  desplazar e ir al estado 17
    '*'  desplazar e ir al estado 18
    '/'  desplazar e ir al estado 19
    '^'  desplazar e ir al estado 20
    ')'  desplazar e ir al estado 30


estado 24

   16 exp: '(' exp ')' .

    $default  reduce usando la regla 16 (exp)


estado 25

   10 exp: exp . '+' exp
   11    | exp . '-' exp
   11    | exp '-' exp .
   12    | exp . '*' exp
   13    | exp . '/' exp
   15    | exp . '^' exp

    '*'  desplazar e ir al estado 18
    '/'  desplazar e ir al estado 19
    '^'  desplazar e ir al estado 20

    $default  reduce usando la regla 11 (exp)


estado 26

   10 exp: exp . '+' exp
   10    | exp '+' exp .
   11    | exp . '-' exp
   12    | exp . '*' exp
   13    | exp . '/' exp
   15    | exp . '^' exp

    '*'  desplazar e ir al estado 18
    '/'  desplazar e ir al estado 19
    '^'  desplazar e ir al estado 20

    $default  reduce usando la regla 10 (exp)


estado 27

   10 exp: exp . '+' exp
   11    | exp . '-' exp
   12    | exp . '*' exp
   12    | exp '*' exp .
   13    | exp . '/' exp
   15    | exp . '^' exp

    '^'  desplazar e ir al estado 20

    $default  reduce usando la regla 12 (exp)


estado 28

   10 exp: exp . '+' exp
   11    | exp . '-' exp
   12    | exp . '*' exp
   13    | exp . '/' exp
   13    | exp '/' exp .
   15    | exp . '^' exp

    '^'  desplazar e ir al estado 20

    $default  reduce usando la regla 13 (exp)


estado 29

   10 exp: exp . '+' exp
   11    | exp . '-' exp
   12    | exp . '*' exp
   13    | exp . '/' exp
   15    | exp . '^' exp
   15    | exp '^' exp .

    '^'  desplazar e ir al estado 20

    $default  reduce usando la regla 15 (exp)


estado 30

    9 exp: ID '(' exp ')' .

    $default  reduce usando la regla 9 (exp)
